# ros-imu-bias-correction

./: CMakeLists.txt  README.md  package.xml
src/: imu_calibrate_node.cpp
